syntax = "proto3";

package user.address;

option go_package = "github.com/people257/poor-guy-shop/user-service/gen/proto/user/address;addresspb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

// 地址服务
service AddressService {
  // 添加地址
  rpc AddAddress(AddAddressReq) returns (AddressResp) {
    option (google.api.http) = {
      post: "/v1/user/addresses"
      body: "*"
    };
  }

  // 更新地址
  rpc UpdateAddress(UpdateAddressReq) returns (AddressResp) {
    option (google.api.http) = {
      put: "/v1/user/addresses/{address_id}"
      body: "*"
    };
  }

  // 删除地址
  rpc DeleteAddress(DeleteAddressReq) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/user/addresses/{address_id}"
    };
  }

  // 获取地址列表
  rpc GetAddresses(google.protobuf.Empty) returns (GetAddressesResp) {
    option (google.api.http) = {
      get: "/v1/user/addresses"
    };
  }

  // 获取地址详情
  rpc GetAddress(GetAddressReq) returns (AddressResp) {
    option (google.api.http) = {
      get: "/v1/user/addresses/{address_id}"
    };
  }

  // 获取默认地址
  rpc GetDefaultAddress(google.protobuf.Empty) returns (AddressResp) {
    option (google.api.http) = {
      get: "/v1/user/addresses/default"
    };
  }

  // 设置默认地址
  rpc SetDefaultAddress(SetDefaultAddressReq) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/user/addresses/{address_id}/default"
    };
  }
}

// 地址信息
message Address {
  string address_id = 1;
  string receiver_name = 2;
  string receiver_phone = 3;
  string province = 4;
  string city = 5;
  string district = 6;
  string street = 7;
  string postal_code = 8;
  string address_label = 9;
  bool is_default = 10;
  string longitude = 11;  // 使用string存储decimal
  string latitude = 12;   // 使用string存储decimal
  string full_address = 13;
  int64 created_at = 14;
  int64 updated_at = 15;
}

// 添加地址请求
message AddAddressReq {
  string receiver_name = 1;
  string receiver_phone = 2;
  string province = 3;
  string city = 4;
  string district = 5;
  string street = 6;
  string postal_code = 7;
  string address_label = 8;
  string longitude = 9;
  string latitude = 10;
}

// 更新地址请求
message UpdateAddressReq {
  string address_id = 1;
  string receiver_name = 2;
  string receiver_phone = 3;
  string province = 4;
  string city = 5;
  string district = 6;
  string street = 7;
  string postal_code = 8;
  string address_label = 9;
  string longitude = 10;
  string latitude = 11;
}

// 删除地址请求
message DeleteAddressReq {
  string address_id = 1;
}

// 获取地址请求
message GetAddressReq {
  string address_id = 1;
}

// 设置默认地址请求
message SetDefaultAddressReq {
  string address_id = 1;
}

// 地址响应
message AddressResp {
  Address address = 1;
}

// 地址列表响应
message GetAddressesResp {
  repeated Address addresses = 1;
  int32 total = 2;
}
